# biz-sim

./: README.md  pyproject.toml
business_simulation/: business_simulation.py  hooks.py  modules.txt
business_simulation/assistant_tools/: __init__.py  accounting_tools.py  sales_tools.py  stock_tools.py
